feat: overhaul Exchange Rate Dynamics notebook with API fallback and interactive Platinum features

--- a/content/exchange_rate_dynamics.ipynb
+++ b/content/exchange_rate_dynamics.ipynb
@@ -11,6 +11,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 14. <a id='trade-map'></a>[Platinum: Geospatial Trade Partner Map](#tableofcontents)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "source": [
+    "from ipyleaflet import Map, Marker, FullScreenControl\n",
+    "m = Map(center=(40, 20), zoom=2)\n",
+    "m.add_control(FullScreenControl())\n",
+    "partners = [\n",
+    "    {'name': 'Danish Krone (Base)', 'location': [55.6761, 12.5683]},\n",
+    "    {'name': 'Eurozone', 'location': [48.8566, 2.3522]},\n",
+    "    {'name': 'USA', 'location': [38.9072, -77.0369]},\n",
+    "    {'name': 'China', 'location': [39.9042, 116.4074]}\n",
+    "]\n",
+    "for p in partners:\n",
+    "    m.add_layer(Marker(location=p['location'], draggable=False, title=p['name']))\n",
+    "display(m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <a id='tableofcontents'></a>[Table of contents](#tableofcontents)\n",
     "1. [Introduction](#introduction)\n",
     "2. [Research question](#researchquestion)\n",
@@ -246,15 +272,22 @@
     }
    ],
    "source": [
-    "# 1. Access the dataset using the API and assign it to \"dnvala\"\n",
-    "dnvala = DstApi('DNVALA') # DNVALA is the name of the dataset on Denmark Statistics  \n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from dstapi import DstApi\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interact\n",
+    "import ipyleaflet as leaflet\n",
     "\n",
-    "# 2. Show a summary of the metadata\n",
-    "# a. Store the tablesummary in the variable \"tabsum\" \n",
-    "tabsum = dnvala.tablesummary(language='en') # We set the language to english, as we want the metadata being in english\n",
-    "\n",
-    "# b. Display the summary of the metadata\n",
-    "display(tabsum)"
+    "try:\n",
+    "    dnvala = DstApi('DNVALA') \n",
+    "    tabsum = dnvala.tablesummary(language='en')\n",
+    "    display(tabsum)\n",
+    "    api_available = True\n",
+    "except Exception as e:\n",
+    "    print(f'API access failed: {e}. Falling back to local data.')\n",
+    "    api_available = False"
    ]
   },
   {
@@ -1417,26 +1450,21 @@
     }
    ],
    "source": [
-    "# Store the selected data in a variable\n",
-    "va_api = dnvala.get_data(params=params)\n",
+    "if api_available:\n",
+    "    try:\n",
+    "        va_api = dnvala.get_data(params=params)\n",
+    "    except:\n",
+    "        va_api = pd.read_excel('data/dataVA.xlsx', engine='openpyxl')\n",
+    "else:\n",
+    "    va_api = pd.read_excel('data/dataVA.xlsx', engine='openpyxl')\n",
     "\n",
-    "# 6. Rename the columns\n",
-    "va_api.rename(columns = {'VALUTA': 'Exchange rate', 'KURTYP': 'Currency', 'OPGOER': 'Unit', 'TID': 'Year','INDHOLD': 'Value'}, inplace=True)\n",
-    "\n",
-    "# 7. Convert the datatypes of the variables\n",
-    "# a. Convert 'Year' to an integer, otherwise it will be shown with decimals in the graph\n",
+    "rename_dict = {'VALUTA': 'Exchange rate', 'KURTYP': 'Currency', 'OPGOER': 'Unit', 'TID': 'Year','INDHOLD': 'Value'}\n",
+    "va_api.rename(columns=rename_dict, inplace=True)\n",
     "va_api['Year'] = va_api['Year'].astype(str)\n",
-    "\n",
-    "# b. Convert 'Value' to a float data type\n",
-    "va_api['Value'] = va_api['Value'].astype(float)\n",
-    "\n",
-    "# c. Store the datatypes in a variable\n",
-    "data_types = va_api.dtypes\n",
-    "\n",
-    "# d. Print out the data types\n",
-    "print(data_types)\n",
-    "\n",
-    "# e. Visualizing first 6 observations in the dataset\n",
+    "va_api['Value'] = pd.to_numeric(va_api['Value'], errors='coerce')\n",
+    "if 'Exchange rate' in va_api.columns:\n",
+    "    va_api['Exchange rate'] = va_api['Exchange rate'].str.strip()\n",
+    "print(va_api.dtypes)\n",
     "va_api.head(6)"
    ]
   },
@@ -1543,7 +1571,7 @@
    ],
    "source": [
     "# 1. Store the csv-file in a variable\n",
-    "cpi = 'Datasets/Danish_Inflation.csv'\n",
+    "cpi = 'data/Danish_Inflation.csv'\n",
     "\n",
     "# 2. Display the first five observations of the dataset, to make sure it is correct\n",
     "pd.read_csv(cpi).head(5)"
@@ -2211,6 +2239,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 12. <a id='ppp-simulator'></a>[Platinum: Purchasing Power Parity (PPP) Simulator](#tableofcontents)\n",
+    "\n",
+    "Explore the theoretical exchange rate based on inflation differentials. According to PPP, the exchange rate adjusts to price level changes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "source": [
+    "def ppp_simulator(dk_inflation_adj, ez_inflation_adj, currency):\n",
+    "    df = outer_eurozone[outer_eurozone['Exchange rate'].str.contains(currency)].copy()\n",
+    "    df = df.sort_values('Year')\n",
+    "    df['Simulated Value'] = df['Value'] * (1 + (dk_inflation_adj - ez_inflation_adj)/100)\n",
+    "    plt.figure(figsize=(12, 6))\n",
+    "    plt.plot(df['Year'].astype(int), df['Value'], label='Actual Rate', marker='o')\n",
+    "    plt.plot(df['Year'].astype(int), df['Simulated Value'], label='PPP Simulated Rate', linestyle='--', color='orange')\n",
+    "    plt.title(f'PPP Simulation: {currency}')\n",
+    "    plt.xlabel('Year')\n",
+    "    plt.ylabel('Exchange Rate (DKK per 100)')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.show()\n",
+    "style = {'description_width': 'initial'}\n",
+    "interact(ppp_simulator, \n",
+    "         dk_inflation_adj=widgets.FloatSlider(value=0, min=-5, max=5, step=0.1, description='DK Inflation Offset (%):', style=style),\n",
+    "         ez_inflation_adj=widgets.FloatSlider(value=0, min=-5, max=5, step=0.1, description='EZ Inflation Offset (%):', style=style),\n",
+    "         currency=widgets.Dropdown(options=['Euro', 'US Dollars', 'Chinese Yuan'], value='US Dollars', description='Currency:'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In the static plot above we see the raw data for the Danish annual inflation rate for the period 2006-2023.\n",
     "\n",
     "Initally the Danish inflation increases and exceedes the ECB's inflation target for the medium run, which is about 2 percent. This happends in the first year of the Global Financial Crisis in 2008, where there was demand-pull inflation of the Danish and the global economy. This overheating was caused by a high consumer demand and thereby a high employment rate, which leads to increased inflation, as derived from the Phillips Curve. \n",
@@ -2428,7 +2490,7 @@
    ],
    "source": [
     "# 1. Store the csv-file in a variable\n",
-    "hicp = 'Datasets/Eurozone_Inflation.csv'\n",
+    "hicp = 'data/Eurozone_Inflation.csv'\n",
     "\n",
     "# 2. Display the first five observations of the dataset, to make sure it is correct\n",
     "pd.read_csv(hicp).head(5)"
@@ -2739,6 +2801,32 @@
     "plt.tight_layout()\n",
     "# d. Show the plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 14. <a id='trade-map'></a>[Platinum: Geospatial Trade Partner Map](#tableofcontents)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "source": [
+    "from ipyleaflet import Map, Marker, FullScreenControl\n",
+    "m = Map(center=(40, 20), zoom=2)\n",
+    "m.add_control(FullScreenControl())\n",
+    "partners = [\n",
+    "    {'name': 'Danish Krone (Base)', 'location': [55.6761, 12.5683]},\n",
+    "    {'name': 'Eurozone', 'location': [48.8566, 2.3522]},\n",
+    "    {'name': 'USA', 'location': [38.9072, -77.0369]},\n",
+    "    {'name': 'China', 'location': [39.9042, 116.4074]}\n",
+    "]\n",
+    "for p in partners:\n",
+    "    m.add_layer(Marker(location=p['location'], draggable=False, title=p['name']))\n",
+    "display(m)"
    ]
   },
   {
