fix: add piplite setup and correct cell order for Exchange Rate Dynamics

--- a/content/exchange_rate_dynamics.ipynb
+++ b/content/exchange_rate_dynamics.ipynb
@@ -8,29 +8,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 14. <a id='trade-map'></a>[Platinum: Geospatial Trade Partner Map](#tableofcontents)\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "from ipyleaflet import Map, Marker, FullScreenControl\n",
-    "m = Map(center=(40, 20), zoom=2)\n",
-    "m.add_control(FullScreenControl())\n",
-    "partners = [\n",
-    "    {'name': 'Danish Krone (Base)', 'location': [55.6761, 12.5683]},\n",
-    "    {'name': 'Eurozone', 'location': [48.8566, 2.3522]},\n",
-    "    {'name': 'USA', 'location': [38.9072, -77.0369]},\n",
-    "    {'name': 'China', 'location': [39.9042, 116.4074]}\n",
-    "]\n",
-    "for p in partners:\n",
-    "    m.add_layer(Marker(location=p['location'], draggable=False, title=p['name']))\n",
-    "display(m)"
+    "# JupyterLite Setup: Install dependencies in the browser runtime\n",
+    "import piplite\n",
+    "await piplite.install(['ipyleaflet', 'ipywidgets', 'openpyxl', 'pandas', 'matplotlib', 'numpy', 'scipy', 'dstapi'])"
    ]
   },
   {
@@ -2801,6 +2786,32 @@
     "plt.tight_layout()\n",
     "# d. Show the plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 14. <a id='trade-map'></a>[Platinum: Geospatial Trade Partner Map](#tableofcontents)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "source": [
+    "from ipyleaflet import Map, Marker, FullScreenControl\n",
+    "m = Map(center=(40, 20), zoom=2)\n",
+    "m.add_control(FullScreenControl())\n",
+    "partners = [\n",
+    "    {'name': 'Danish Krone (Base)', 'location': [55.6761, 12.5683]},\n",
+    "    {'name': 'Eurozone', 'location': [48.8566, 2.3522]},\n",
+    "    {'name': 'USA', 'location': [38.9072, -77.0369]},\n",
+    "    {'name': 'China', 'location': [39.9042, 116.4074]}\n",
+    "]\n",
+    "for p in partners:\n",
+    "    m.add_layer(Marker(location=p['location'], draggable=False, title=p['name']))\n",
+    "display(m)"
    ]
   },
   {
