fix: resolve ModuleNotFoundError with localized dstapi and robust build bundling

--- a/content/exchange_rate_dynamics.ipynb
+++ b/content/exchange_rate_dynamics.ipynb
@@ -10,12 +10,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "trusted": true
+   },
    "outputs": [],
    "source": [
-    "# JupyterLite Setup: Install dependencies in the browser runtime\n",
-    "import piplite\n",
-    "await piplite.install(['ipyleaflet', 'ipywidgets', 'openpyxl', 'pandas', 'matplotlib', 'numpy', 'scipy', 'dstapi'])"
+    "# 1. Laboratory Environment Setup\n",
+    "# This cell ensures all required interactive modules are loaded.\n",
+    "try:\n",
+    "    import ipyleaflet\n",
+    "    import ipywidgets\n",
+    "    print(\"✅ Platinum modules loaded successfully.\")\n",
+    "except ImportError:\n",
+    "    print(\"📦 Installing missing modules (this may take 30-60 seconds)...\")\n",
+    "    import piplite\n",
+    "    await piplite.install(['ipyleaflet', 'ipywidgets', 'openpyxl'])\n",
+    "    print(\"✅ Installation complete. Please RESTART the kernel if modules are still not found.\")\n",
+    "\n",
+    "# 2. Local Dependency Check\n",
+    "import os\n",
+    "if os.path.exists('dstapi.py'):\n",
+    "    print(\"✅ Local dstapi.py detected.\")\n",
+    "else:\n",
+    "    print(\"⚠️ Local dstapi.py missing. API fallback may rely on pre-installed versions.\")"
    ]
   },
   {
@@ -114,22 +131,27 @@
     }
    ],
    "source": [
-    "# 1. Import the classic Python packages\n",
+    "# 1. Import core packages\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
-    "from ipywidgets import interact, widgets\n",
+    "from ipywidgets import interact\n",
     "\n",
-    "# 2. Autoreload the modules, when the code is run\n",
+    "# 2. Autoreload for local modules\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "# 4. Setup the API\n",
-    "# a. If not downloaded before, run this code to download the API for Denmarks Statistics: %pip install git+https://github.com/alemartinello/dstapi\n",
-    "\n",
-    "# b. Import the DstApi-class from the API\n",
-    "from dstapi import DstApi"
+    "# 3. Import localized API helper\n",
+    "try:\n",
+    "    from dstapi import DstApi\n",
+    "    print(\"✅ DstApi loaded from local source.\")\n",
+    "except ImportError:\n",
+    "    print(\"⚠️ DstApi local import failed. Checking environment...\")\n",
+    "    try:\n",
+    "        from dstapi.dstapi import DstApi # Fallback for some packaging styles\n",
+    "    except ImportError:\n",
+    "        print(\"❌ DstApi not found. Please ensure dstapi.py is in the same folder.\")"
    ]
   },
   {
