feat: implement advanced optimizations (Parquet, Theme Sync, CI/CD Testing)

--- a/content/exchange_rate_dynamics.ipynb
+++ b/content/exchange_rate_dynamics.ipynb
@@ -171,7 +171,27 @@
     "    try:\n",
     "        from dstapi.dstapi import DstApi # Fallback for some packaging styles\n",
     "    except ImportError:\n",
-    "        print(\"❌ DstApi not found. Please ensure dstapi.py is in the same folder.\")"
+    "        print(\"❌ DstApi not found. Please ensure dstapi.py is in the same folder.\")",
+    "\n",
+    "# High-performance data loader\n",
+    "def load_data_resilient(filename):\n",
+    "    \"\"\"Attempts to load parquet, then falls back to csv/xlsx.\"\"\"\n",
+    "    base, _ = os.path.splitext(filename)\n",
+    "    parquet_path = f\"data/{base}.parquet\"\n",
+    "    csv_path = f\"data/{base}.csv\"\n",
+    "    xlsx_path = f\"data/{base}.xlsx\"\n",
+    "    \n",
+    "    if os.path.exists(parquet_path):\n",
+    "        print(f\"✅ Loading optimized Parquet: {parquet_path}\")\n",
+    "        return pd.read_parquet(parquet_path)\n",
+    "    elif os.path.exists(csv_path):\n",
+    "        print(f\"⚠️ Falling back to CSV: {csv_path}\")\n",
+    "        return pd.read_csv(csv_path)\n",
+    "    elif os.path.exists(xlsx_path):\n",
+    "        print(f\"⚠️ Falling back to Excel: {xlsx_path}\")\n",
+    "        return pd.read_excel(xlsx_path)\n",
+    "    else:\n",
+    "        raise FileNotFoundError(f\"Could not find {filename} in data/ folder.\")\n"
    ]
   },
   {
