feat: implement Platinum Hybrid (Google Colab) support

--- a/content/exchange_rate_dynamics.ipynb
+++ b/content/exchange_rate_dynamics.ipynb
@@ -4,7 +4,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Ebsen Research Lab: Exchange Rate Dynamics\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/AntonEbsen/research-lab/blob/main/content/exchange_rate_dynamics.ipynb)\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# EXCHANGE RATE DYNAMICS: THE RELATIONSHIP BETWEEN DANISH INFLATION AND RELATIVE EXCHANGE RATES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "trusted": true,
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# --- Google Colab Bootstrap (Auto-detected) ---\n",
+    "import sys\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    print(\"🚀 running in Google Colab environment. Preparing data and laboratory...\")\n",
+    "    import os\n",
+    "    # 1. Clone repository data if missing\n",
+    "    if not os.path.exists('data'):\n",
+    "        print(\"⏳ Fetching project data...\")\n",
+    "        !git clone https://github.com/AntonEbsen/research-lab.git temp_repo\n",
+    "        !cp -r temp_repo/content/data data\n",
+    "        !cp temp_repo/content/dstapi.py dstapi.py\n",
+    "        !rm -rf temp_repo\n",
+    "    \n",
+    "    # 2. Install special dependencies\n",
+    "    print(\"⏳ Installing Colab extensions...\")\n",
+    "    !pip install ipyleaflet pyarrow openpyxl\n",
+    "    \n",
+    "    print(\"✅ Colab Environment ready!\")\n",
+    "else:\n",
+    "    print(\"🏠 Running in local/JupyterLite environment.\")"
    ]
   },
   {
