fix(ci): resolve requests dependency and nbval NameError failures

--- a/content/exchange_rate_dynamics.ipynb
+++ b/content/exchange_rate_dynamics.ipynb
@@ -2958,7 +2958,7 @@
    "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
-    "from IPython.display import display, clear_output, Javascript\n",
+    "from IPython.display import display, clear_output, Javascript, HTML\n",
     "\n",
     "# --- Gist Export UI ---\n",
     "token_input = widgets.Password(description='GitHub PAT:', placeholder='Enter PAT to enable export')\n",
@@ -3026,7 +3026,7 @@
     "display(HTML(\"<br/><h3>💬 Live Commentary</h3>\"))\n",
     "display(widgets.VBox([name_input, comment_input, post_button]))\n",
     "display(comment_feed)\n",
-    "refresh_comments()"
+    "refresh_comments()\n"
    ]
   }
  ],
